Fix horizontal scrolling in convo/message lists
This removes some errant horizontal scrollability from the conversation list and
the message list.

// FREEBIE

--- a/stylesheets/_index.scss
+++ b/stylesheets/_index.scss
@@ -24,7 +24,7 @@
   .content {
     background-color: $grey_l;
     flex-grow: 1;
-    overflow-y: overlay;
+    overflow-y: auto;
   }
 }
 .network-status-container {
